--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 #champu{font-size:21px;color:white; padding:0px 25px;}
 .kalua{font-size:65px;color:white; padding:0px 19px;}
 #aarav{background:url("backgroundimg.jpg") no-repeat center;
-width:100%; padding:50px 19px;height:100%;}
+width:100%; padding:70px 19px;}
 #abhishek{margin:7px 7px;}
 #shashwat{background-color:orange;height:37px; width:180px; color
 :white; float:right;margin:5px 23px; display:flex; border-radius:1px;}
