--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="aryan">
 
             <a href="index.html" class="bittu">home</a>
-            <a href="service.html" class="bittu">services +</a>
+            <a href="service.html" class="bittu">services</a>
             <a href="project" class="bittu">projects</a>
             <a href="about.html" class="bittu">about</a>
             <a href="contact.html" class="bittu">contact</a>
