--- a/service.html
+++ b/service.html
@@ -186,7 +186,7 @@
 
         .aryan {
             display: flex;
-            margin: 5px 35px;
+
         }
 
 
@@ -220,7 +220,7 @@
         <div class="aryan">
 
             <a href="index.html" class="bittu">home</a>
-            <a href="service.html" class="bittu">services +</a>
+            <a href="service.html" class="bittu">services</a>
             <a href="project.html" class="bittu">projects</a>
             <a href="about.html" class="bittu">about</a>
             <a href="contact.html" class="bittu">contact</a>
